--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,8 @@
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     font-family: 'Lobster Two', cursive;
 }
 
@@ -37,10 +38,11 @@ section {
 
 @media all and (min-width: 600px) {
     section {
-        width: 65%;
+        width: 68%;
         float: left;
         padding: 0;
         padding-left: 10px;
+        height: auto;
     }
 }
 
