--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ textarea {
     background-color: white;
     font-family: 'Fredoka One', cursive;
     font-size: 1.5em;
-    width: 20%;
+    width: 100px;
 }
 
 .button:hover {
